[gd_scene load_steps=25 format=2]

[ext_resource path="res://level/LevelGeometry.tscn" type="PackedScene" id=1]
[ext_resource path="res://CameraAnchor.gd" type="Script" id=2]
[ext_resource path="res://PlayerControl.gd" type="Script" id=3]
[ext_resource path="res://piggie_material.tres" type="Material" id=4]
[ext_resource path="res://cubepig.obj" type="ArrayMesh" id=5]
[ext_resource path="res://main_menu_theme.tres" type="Theme" id=6]
[ext_resource path="res://american_porco.png" type="Texture" id=7]
[ext_resource path="res://JumpStomp.tres" type="Animation" id=8]
[ext_resource path="res://font/menu_font_20.tres" type="DynamicFont" id=9]
[ext_resource path="res://DugUpPanel.gd" type="Script" id=10]
[ext_resource path="res://diggable_items/plant_pot_broken_paint_small.png" type="Texture" id=11]
[ext_resource path="res://MusicChangeSensor.gd" type="Script" id=12]
[ext_resource path="res://diggable_items/DigPoint.tscn" type="PackedScene" id=13]
[ext_resource path="res://diggable_items/pixel_wand.png" type="Texture" id=14]
[ext_resource path="res://diggable_items/unexploded bomb.png" type="Texture" id=15]
[ext_resource path="res://diggable_items/crosleyrefrigerator.jpg" type="Texture" id=16]
[ext_resource path="res://diggable_items/oilbarrel.jpg" type="Texture" id=17]
[ext_resource path="res://MusicChangeTrigger.gd" type="Script" id=18]
[ext_resource path="res://OnScreenUI.gd" type="Script" id=20]
[ext_resource path="res://Dig.gd" type="Script" id=21]
[ext_resource path="res://font/TruffleCounterTextFont.tres" type="DynamicFont" id=24]
[ext_resource path="res://diggable_items/cool_bug.png" type="Texture" id=25]

[sub_resource type="SphereShape" id=84]

[sub_resource type="BoxShape" id=85]
extents = Vector3( 1.76703, 1.46126, 2.43936 )

[node name="PlayScene" type="Spatial"]

[node name="SpawnPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="Player" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.64089, 0 )
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
linear_damp = 1.0
script = ExtResource( 3 )

[node name="CameraAnchor" type="Spatial" parent="Player"]
script = ExtResource( 2 )

[node name="CameraRotateTimer" type="Timer" parent="Player/CameraAnchor"]
wait_time = 0.2
one_shot = true
autostart = true

[node name="Camera" type="Camera" parent="Player/CameraAnchor"]
transform = Transform( 1, 0, 0, 0, 0.903926, 0.427689, 0, -0.427689, 0.903926, 0, 3, 5 )
current = true

[node name="MeshAnchor" type="Spatial" parent="Player"]
transform = Transform( 0.33, 0, 0, 0, 0.33, 0, 0, 0, 0.33, 0, 0, 0 )

[node name="MeshAnimationAnchor" type="Spatial" parent="Player/MeshAnchor"]

[node name="MeshInstance" type="MeshInstance" parent="Player/MeshAnchor/MeshAnimationAnchor"]
transform = Transform( -8.56817e-08, 0, 2, 0, 2, 0, -2, 0, -8.56817e-08, 0.980695, -1.10348, -0.856853 )
mesh = ExtResource( 5 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
shape = SubResource( 84 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/JumpStomp = ExtResource( 8 )

[node name="LevelGeometry" parent="." instance=ExtResource( 1 )]

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.22119, 5.7604, -52.564 )
light_color = Color( 0.937255, 0.0823529, 1, 1 )
light_energy = 1.243
light_indirect_energy = 16.0
shadow_enabled = true
omni_range = 263.099

[node name="Dig Points" type="Node" parent="."]
script = ExtResource( 21 )

[node name="DigTruffles1" parent="Dig Points" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.747, -0.315, 0.043 )
text = "Ah yes, truffles - your favorite food and a miraculous survivor of the climate apocalypse."

[node name="DigPointPorco2" parent="Dig Points" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.37899, -0.733858, 11.7483 )
texture = ExtResource( 7 )
text = "[  ...  ]"

[node name="DigPointCoolBug" parent="Dig Points" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.8631, -0.733858, 25.465 )
texture = ExtResource( 25 )
text = "Finding a cool bug is always a treasure. Despite your omnivorous tendencies, you can't eat this bug - it's too cool."

[node name="DigPointBrokenPot" parent="Dig Points" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.53266, 0, -28.365 )
texture = ExtResource( 11 )
text = "A clay planter, long since rent asunder by the roots of the plant it once held. It doesn't taste very good."

[node name="DigTruffles4" parent="Dig Points" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -14.9362 )
text = "Truffles. Sometimes, you actually find what you're looking for."

[node name="DigTruffles5" parent="Dig Points" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -31.6032, 3.0756, -38.596 )
text = "Truffles! Once, humans would have used you to find these delicacies. Now, they're all yours!"

[node name="DigWand" parent="Dig Points" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -38.9189, 3.44788, -60.9976 )
texture = ExtResource( 14 )
text = "Looking at this wand stirs a longing that you can't quite place."

[node name="MusicChangeTrigger" type="Node" parent="Dig Points/DigWand"]
script = ExtResource( 18 )

[node name="DigPointUnexplodedBomb" parent="Dig Points" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -42.2, 3.8, -26.9 )
texture = ExtResource( 15 )
text = "Unexploded ordinance. This would be disconcerting, if you weren't a pig. Since you are, and it doesn't have truffles in it, it isn't a very interesting find."

[node name="DigPointRefrigirator" parent="Dig Points" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -28.6421, 1.27846, -54.5932 )
texture = ExtResource( 16 )
text = "This appears to be a flyer for an old refrigerator advertisement from 1948. This fridge was one of the first models to use a chemical known as CFC, which was a potent greenhouse gas that decimated the ozone layer. Of course, you are a pig, and humanity is gone, so these details aren't very important. This doesn't look edible."

[node name="DigPointOilBarrel" parent="Dig Points" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.0749, -0.406188, -40.1663 )
texture = ExtResource( 17 )
text = "Before you lies one of the greatest remnants of human folly - the cornerstone of industrial progress causing humanity to fly closer and closer towards the sun, inch by inch, until the self-induced heat waves melted them like wax. Unfortunately, these details don't matter to a pig looking for food. The barrel itself doesn't seem to be edible, but there are some small patches of non-poisonous mushrooms growing on the surface. You hungrily eat what you can."

[node name="ItemPanel" type="PanelContainer" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 75.0
margin_right = -100.0
margin_bottom = -75.0
script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="ItemPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 817.0
margin_bottom = 443.0
size_flags_vertical = 3
theme = ExtResource( 6 )
custom_constants/separation = 5
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ItemPanel/VBoxContainer"]
margin_right = 810.0
margin_bottom = 399.0
size_flags_vertical = 3

[node name="ItemImage" type="TextureRect" parent="ItemPanel/VBoxContainer/HBoxContainer"]
margin_right = 405.0
margin_bottom = 399.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 7
size_flags_vertical = 7
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="ItemTextLabel" type="Label" parent="ItemPanel/VBoxContainer/HBoxContainer"]
margin_left = 405.0
margin_top = 186.0
margin_right = 810.0
margin_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 9 )
text = "This is some text for an image"
align = 1
valign = 2
autowrap = true

[node name="KeepDiggingButton" type="Button" parent="ItemPanel/VBoxContainer"]
pause_mode = 2
margin_left = 333.0
margin_top = 404.0
margin_right = 476.0
margin_bottom = 436.0
size_flags_horizontal = 4
size_flags_vertical = 8
custom_fonts/font = ExtResource( 9 )
text = "Keep Digging"

[node name="OnScreenUI" type="Control" parent="."]
margin_right = 1027.0
margin_bottom = 605.0
mouse_filter = 2
script = ExtResource( 20 )

[node name="TruffleCounter" type="Label" parent="OnScreenUI"]
margin_left = 28.0
margin_right = 158.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 24 )
text = "0/1"
valign = 1

[node name="MusicChangeSensor" type="Area" parent="."]
transform = Transform( 0.97099, -0.180168, -0.15722, 0.19516, 0.977022, 0.0856799, 0.138171, -0.113877, 0.98384, -12.7439, 0.645996, -29.2315 )
script = ExtResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="MusicChangeSensor"]
transform = Transform( 1, 3.91155e-08, 2.98023e-08, -1.86265e-09, 1, -7.45058e-09, -1.49012e-08, -2.23517e-08, 1, -0.106146, 0.0874825, -0.7558 )
shape = SubResource( 85 )

[connection signal="animation_finished" from="Player/AnimationPlayer" to="Player" method="_on_animation_finished"]
[connection signal="animation_started" from="Player/AnimationPlayer" to="Player" method="_on_animation_started"]
[connection signal="update_item_counter" from="Dig Points" to="OnScreenUI" method="_on_Dig_Points_update_item_counter"]
[connection signal="pressed" from="ItemPanel/VBoxContainer/KeepDiggingButton" to="ItemPanel" method="_on_KeepDiggingButton_pressed"]
[connection signal="body_entered" from="MusicChangeSensor" to="MusicChangeSensor" method="_on_body_entered"]
